[gd_scene load_steps=5 format=3 uid="uid://cpljr016pccwd"]

[ext_resource type="Script" path="res://cards/card.gd" id="1_0wbyr"]
[ext_resource type="Texture2D" uid="uid://b5kke4ccmrcpt" path="res://battle/units/sprites/worm_knight_card_art.png" id="2_27jvq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_iguum"]
size = Vector3(0.5, 1, 0.01)

[sub_resource type="PlaneMesh" id="PlaneMesh_eeurm"]
size = Vector2(0.5, 1)
orientation = 2

[node name="StaticBody3D" type="Area3D"]
script = ExtResource("1_0wbyr")
card_name = "Knight"
art = ExtResource("2_27jvq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_iguum")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
mesh = SubResource("PlaneMesh_eeurm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_eeurm")

[node name="CardNameLabel" type="Label3D" parent="MeshInstance3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.417906, 0.00258192)
pixel_size = 0.001
double_sided = false
texture_filter = 1
text = "Knight"
font_size = 128
outline_size = 0

[node name="Art" type="Sprite3D" parent="MeshInstance3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00153491)
cast_shadow = 0
pixel_size = 0.0018
double_sided = false
texture = ExtResource("2_27jvq")

[connection signal="input_event" from="." to="." method="_input_event"]
[connection signal="mouse_entered" from="." to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_mouse_exited"]
